# iree-rv32-springbok

./: CMakeLists.txt  README.md  python-requirements.txt  springbok_config.h
.github/workflows/: springbok.yml
build_tools/: build_riscv.sh  download_iree_compiler.py  download_renode.py  gen_mlmodel_input.py  install_toolchain.sh  sim_springbok.sh  test_runner.py
cmake/: iree_model_input.cmake  riscv_iree.cmake  riscv_springbok.cmake  springbok_bytecode_module.cmake  springbok_c_module.cmake  springbok_modules.cmake  springbok_ops.cmake  springbok_static_module.cmake  springbok_vmvx_module.cmake
samples/: CMakeLists.txt  lit.cfg.py
samples/device/: CMakeLists.txt  device.h  device_static_loader.c  device_vmvx_loader.c
samples/float_model/: CMakeLists.txt  mnist.c  mnist.h  mnist_bytecode_static_test.txt  mnist_emitc_static_test.txt  mobilenet_v1.c  mobilenet_v1.h  mobilenet_v1_bytecode_static_test.txt  mobilenet_v1_emitc_static_test.txt
samples/quant_model/: CMakeLists.txt  mobilenet_v1.c  mobilenet_v1.h  mobilenet_v1_bytecode_static_test.txt  mobilenet_v1_emitc_static_test.txt
samples/simple_vec_mul/: CMakeLists.txt  float_vec.c  int_vec.c  simple_float_mul.mlir  simple_int_mul.mlir  simple_test.txt
samples/util/: CMakeLists.txt  alloc.c  alloc.h  model_api.h  util.c  util.h
sim/config/: springbok.resc
sim/config/infrastructure/: SpringbokRiscV32.cs
springbok/: CMakeLists.txt  crt0.S  springbok.cpp  springbok.ld  springbok_gloss.cpp
springbok/include/: springbok.h  springbok_intrinsics.h
